<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sky_blue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/scelta_calc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/app_name"
            android:textIsSelectable="false"
            android:textSize="@dimen/scelta_calc_title"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mbsel_butt"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scelta_calc_testo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="MbSel"
            android:text="@string/mb_sel_butt"
            android:textSize="@dimen/calc_butt_text_size" />

        <Button
            android:id="@+id/cisel_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mbsel_butt"
            android:layout_centerInParent="true"
            android:onClick="CiSel"
            android:text="@string/ci_sel_butt"
            android:textSize="@dimen/calc_butt_text_size" />

        <Button
            android:id="@+id/ciNSsel_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cisel_butt"
            android:layout_centerInParent="true"
            android:onClick="CiNsSel"
            android:text="@string/ci_ns_sel_butt"
            android:textSize="@dimen/calc_butt_text_size" />
        <Button
            android:id="@+id/closeMainAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ciNSsel_butt"
            android:layout_centerInParent="true"
            android:onClick="closeMainAct"
            android:layout_marginTop="15dp"
            android:text="Chiudi App"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/scelta_calc_testo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/scelta_calc_title"
            android:layout_marginTop="20dp"
            android:text="@string/help_scelta_calcolo"
            android:textStyle="italic" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_below="@id/closeMainAct"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/galileo_logo_foreground" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>